# notes-backend

./: .gitignore  Dockerfile  db_utilities.py  main.py  pyproject.toml
.github/workflows/: deploy.yml  unit_test.yml
deeplink/: apple-app-site-association  assetlinks.json
notes_backend/: collections.py  models.py  patterns.py
notes_backend/auth/: login_utilities.py  models.py
notes_backend/core/: NotesBaseModel.py  __init__.py  email_service.py  mongo_database.py
notes_backend/core/websocket/: connection_manager.py
notes_backend/deeplinking/: routes.py
notes_backend/group/: models.py  routes.py
notes_backend/health/: routes.py
notes_backend/notes/: models.py  routes.py
notes_backend/rewards/: routes.py
notes_backend/user/: models.py  otp_types.py  routes.py
notes_backend/websocket/: models.py  routes.py
tests/: conftest.py  test_main.py
tests/admin_utilities/: test_send_group_credit.py  test_send_notification_credit.py
tests/auth/: test_auth.py
tests/group/: conftest.py  test_create_group.py  test_delete_group.py  test_get_my_groups.py  test_join_group.py  test_leave_group.py  test_update_group.py
tests/notes/: conftest.py  test_create_note.py  test_delete_note.py  test_get_note.py
tests/user/: conftest.py  test_check_otp.py  test_confirm_to_delete.py  test_get_user.py  test_renew_password.py  test_send_delete_account_otp.py  test_send_forgot_otp.py  test_user_delete.py  test_user_login.py  test_user_register.py
