[tool.poetry]
name = "notes-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pymongo = "^4.8.0"
faker = "^26.0.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
fastapi-jwt = "^0.3.0"
authlib = "^1.3.1"
localtrans = "^0.1.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
